--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,6 @@ logs
 /config/*
 run_none.bat
 config/old/bot_config_20250405_212257.toml
+（测试版）麦麦生成人格.bat
+（临时版）麦麦开始学习.bat
+src/plugins/utils/statistic.py
