ci/github-actions: update ruff job to handle specific refs
- Set fetch-depth to 0 to fetch the entire history
- Add ref input to checkout specific branch or tag

--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.head_ref || github.ref_name }}
       - uses: astral-sh/ruff-action@v3
       - run: ruff check --fix
       - run: ruff format
