feat: 新增LPMM知识库模块及工具支持
- 新增LPMM知识库模块，包括实体提取、RDF构建、Embedding存储、KG管理等功能
- 新增`lpmm_get_knowledge`工具，支持从LPMM知识库中检索相关信息
- 新增OpenIE数据处理模块，支持信息提取、数据导入等功能
- 新增知识库初始化脚本，支持从原始数据到知识库的完整处理流程
- 新增配置文件`lpmm_config.toml`，支持自定义知识库相关参数
- 新增日志模块`LPMM_STYLE_CONFIG`，支持知识库相关日志输出
- 新增`raw_data_preprocessor.py`、`info_extraction.py`、`import_openie.py`等脚本，支持知识库数据预处理

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ memory_graph.gml
 config/bot_config_dev.toml
 config/bot_config.toml
 config/bot_config.toml.bak
+config/lpmm_config.toml
+config/lpmm_config.toml.bak
 src/plugins/remote/client_uuid.json
 （测试版）麦麦生成人格.bat
 （临时版）麦麦开始学习.bat
@@ -240,4 +242,5 @@ logs
 
 /config/*
 config/old/bot_config_20250405_212257.toml
+temp/
 
