feat：新的表情包系统，表情包成为类，且含义更丰富，发送更快

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "1.4.1"
+version = "1.4.2"
 
 #----以下是给开发人员阅读的，如果你只是部署了麦麦，不需要阅读----
 #如果你想要修改配置文件，请在修改后将version的值进行变更
@@ -125,7 +125,12 @@ at_bot_inevitable_reply = false # @bot 必然回复
 max_emoji_num = 90 # 表情包最大数量
 max_reach_deletion = true # 开启则在达到最大数量时删除表情包，关闭则达到最大数量时不删除，只是不会继续收集表情包
 check_interval = 30 # 检查表情包（注册，破损，删除）的时间间隔(分钟)
+
 auto_save = true  # 是否保存表情包和图片
+
+save_pic = false # 是否保存图片
+save_emoji = false # 是否保存表情包
+steal_emoji = true # 是否偷取表情包，让麦麦可以发送她保存的这些表情包
 
 enable_check = false  # 是否启用表情包过滤，只有符合该要求的表情包才会被保存
 check_prompt = "符合公序良俗" # 表情包过滤要求，只有符合该要求的表情包才会被保存
