dev：修复记忆构建文本名称问题

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -48,12 +48,10 @@ personality_sides = [
 identity_detail = [
     "身份特点",
     "身份特点",
-]# 条数任意，不能为0, 该选项还在调试中，可能未完全生效
+]# 条数任意，不能为0, 该选项还在调试中
 #外貌特征
-height = 170 # 身高 单位厘米 该选项还在调试中，暂时未生效
-weight = 50 # 体重 单位千克 该选项还在调试中，暂时未生效
-age = 20 # 年龄 单位岁 该选项还在调试中，暂时未生效
-gender = "男" # 性别 该选项还在调试中，暂时未生效
+age = 20 # 年龄 单位岁 
+gender = "男" # 性别 
 appearance = "用几句话描述外貌特征" # 外貌特征 该选项还在调试中，暂时未生效
 
 [schedule]
